--- a/todo-appliccation/frontend/src/assets/css/App.css
+++ b/todo-appliccation/frontend/src/assets/css/App.css
@@ -1,5 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .app {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
+    /* background-color: #FFFAF2; */
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+    color: #1D1B1B;
 }
