--- a/todo-appliccation/frontend/src/assets/css/App.css
+++ b/todo-appliccation/frontend/src/assets/css/App.css
@@ -2,8 +2,7 @@
 
 .app {
     font-family: "Inter", sans-serif;
-    /* background-color: #FFFAF2; */
-    background-color: #000000;
+    background-color: #FFFAF2;
     width: 100%;
     height: 100%;
     color: #1D1B1B;
