--- a/todo-appliccation/frontend/src/assets/css/TaskList.css
+++ b/todo-appliccation/frontend/src/assets/css/TaskList.css
@@ -2,8 +2,9 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 50px rgba(115, 115, 115, 0.1);
     border-radius: 8px;
-    padding: 30px 30px;
-    height: calc(100vh - 220px);
+    padding: 0px 30px;
+    height: calc(100vh - 160px);
+    overflow-y: scroll;
 }
 
 .taskCategory__title {
@@ -11,6 +12,10 @@
     font-weight: 500;
     margin: 0;
     margin-bottom: 15px;
+    padding-top: 35px;
+}
+.taskCategory__title:first-child {
+    padding-top: 45px;
 }
 
 .task {
