--- a/todo-appliccation/frontend/src/assets/css/TaskList.css
+++ b/todo-appliccation/frontend/src/assets/css/TaskList.css
@@ -4,7 +4,7 @@
     border-radius: 8px;
     padding: 0px 30px;
     height: calc(100vh - 160px);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .taskCategory__title {
