--- a/todo-appliccation/frontend/src/assets/css/AddEdit.css
+++ b/todo-appliccation/frontend/src/assets/css/AddEdit.css
@@ -13,6 +13,7 @@
     margin: 0;
     margin-bottom: 15px;
     padding-top: 35px;
+    text-transform: capitalize;
 }
 
 .add__form {
@@ -61,6 +62,7 @@
     margin-left: 10px;
     cursor: pointer;
     color: #1D1B1B;
+    text-transform: capitalize;
 }
 .add__button:first-child {
     background: rgba(14, 149, 148, 0.3)
