--- a/todo-appliccation/frontend/src/assets/css/TaskList.css
+++ b/todo-appliccation/frontend/src/assets/css/TaskList.css
@@ -13,6 +13,7 @@
     margin: 0;
     margin-bottom: 15px;
     padding-top: 35px;
+    text-transform: capitalize;
 }
 .taskCategory__title:first-child {
     padding-top: 45px;
