[TODO - Frontend] Added functionality to render graphs

--- a/todo-appliccation/frontend/src/assets/css/Summary.css
+++ b/todo-appliccation/frontend/src/assets/css/Summary.css
@@ -1,4 +1,4 @@
-.summary {
+.summaryCategory {
     background: #ffffff;
     box-shadow: 0px 0px 50px rgba(115, 115, 115, 0.1);
     border-radius: 8px;
